tests/ui/feature-gates/feature-gate-omit-gdb-pretty-printer-section.rs
#[omit_gdb_pretty_printer_section] //~ ERROR the `#[omit_gdb_pretty_printer_section]` attribute is
fn main() {}
